<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_black"
    tools:context=".activity_add">

    <TextView
        android:id="@+id/txt_agregar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_agregar"
        android:textColor="@color/light_white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.061"/>

    <Button
        android:id="@+id/btn_gastos"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:background="@color/light_white"
        android:text="@string/txt_Gastos"
        android:textColor="@color/light_black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.253"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
         />

    <Button
        android:id="@+id/btn_ingresos"
        android:layout_width="131dp"
        android:layout_height="48dp"
        android:background="@color/light_black"
        android:text="@string/txt_Ingresos"
        android:textColor="@color/light_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.721"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184" />

    <Button
        android:id="@+id/btn_regresar"
        android:layout_width="117dp"
        android:layout_height="49dp"
        android:background="@drawable/button_style_black"
        android:text="@string/txt_regresar"
        android:textColor="@color/light_white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.052"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.043" />


    <ViewFlipper
        android:id="@+id/view_fliper"
        android:layout_width="409dp"
        android:layout_height="500dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">


        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="409dp"
            android:layout_height="500sp"
            android:backgroundTint="#1A1919"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/imgb_comida"

                android:layout_width="90dp"
                android:layout_height="90dp"

                android:layout_marginStart="120sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/comida"
                android:contentDescription="@string/txt_comidas"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/comida" />

            <ImageButton
                android:id="@+id/imgb_compras"
                android:layout_width="90dp"
                android:layout_height="90dp"

                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"

                android:background="@drawable/compras"
                android:contentDescription="@string/txt_compras"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/compras" />

            <TextView
                android:id="@+id/txt_comidas"

                android:layout_width="71dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="25sp"
                android:layout_marginTop="100sp"

                android:text="@string/txt_compras"
                android:textColor="@color/light_white"

                />

            <TextView
                android:id="@+id/txt_compras"

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="135sp"
                android:layout_marginTop="100sp"

                android:text="@string/txt_comidas"
                android:textColor="@color/light_white" />

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:backgroundTint="#1A1919"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            tools:visibility="visible">

            <ImageButton
                android:id="@+id/imgbtn_salario"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginStart="120sp"
                android:layout_marginTop="10sp"
                android:background="@drawable/comida"
                android:contentDescription="@string/txt_salario"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/start_salario" />

            <ImageButton
                android:id="@+id/imgbtn_parcial"
                android:layout_width="90dp"
                android:layout_height="90dp"

                android:layout_marginStart="10sp"
                android:layout_marginTop="10sp"

                android:background="@drawable/compras"
                android:contentDescription="@string/txt_parcial"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/start_tiempoparcial" />

            <TextView
                android:id="@+id/txt_parcial"
                android:layout_width="71dp"
                android:layout_height="wrap_content"

                android:layout_marginStart="30sp"
                android:layout_marginTop="100sp"

                android:text="@string/txt_parcial"
                android:textColor="@color/light_white" />

            <TextView
                android:id="@+id/txt_salario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="140sp"
                android:layout_marginTop="100sp"

                android:text="@string/txt_salario"
                android:textColor="@color/light_white" />
        </androidx.cardview.widget.CardView>


    </ViewFlipper>

    <include
        android:id="@+id/teclado_personal"
        layout="@layout/teclado_numerico"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>